--- a/.Archive/0-1发刊词丨52次加速，助你成为“超级个体”.md/2017-02-08 14-26-33.md
+++ b/.Archive/0-1发刊词丨52次加速，助你成为“超级个体”.md/2017-02-08 14-26-33.md
@@ -43,36 +43,35 @@
 所以我的希望是——从自己这些年学习的近50门最新课程、近千个案例和正在活跃的“超级个体”的经历中，总结出最新的职场理念、技能和方法论，并且提炼和分享出来。
 如果你没有时间每周都去学新课程、见牛人，我想我能替你省掉这部分时间。
 在《超级个体》里，我们准备这么干：
-**1.每周探讨一个加速发展的职场主题，重新认知个体崛起时代的职场**
-- 未来5年职场将有什么变化，如何应对？ 
-- 有哪些越来越火的新职业方式会出现？
-- 职场人如何获得更大限度的自由？
-- 个人魅力时代，如何塑造个人品牌？
-- 如何发现天赋并打造自己的优势？
-- 如何更快提升专业能力？
-- 怎样在奋斗的同时保持精力充沛？
-- 怎样快速做不后悔的决策？
-- 什么是这个时代有效的“人脉管理”？
-- 怎样成为一个既自律又有趣的人？
+1. 每周探讨一个加速发展的职场主题，重新认知个体崛起时代的职场
+未来5年职场将有什么变化，如何应对？ 
+有哪些越来越火的新职业方式会出现？
+职场人如何获得更大限度的自由？
+个人魅力时代，如何塑造个人品牌？
+如何发现天赋并打造自己的优势？
+如何更快提升专业能力？
+怎样在奋斗的同时保持精力充沛？
+怎样快速做不后悔的决策？
+什么是这个时代有效的“人脉管理”？
+怎样成为一个既自律又有趣的人？
 ……
 如果把你当成一家公司，你的核心能力由这4个部分组成： 产品能力 （对事的竞争力）、 媒体能力 （对人的影响力）、 运营能力 （对组织的领导力）以及战略能力 （自己的个人成长）。这4大类型8个板块的能力，构成一个人的职业核心竞争力。
 
-![](./_image/WechatIMG6.png)
 
-**2.每次一个看得懂、记得住、能实操的工具、模型或方法论。**
+点击图片可放大
+2. 每次一个看得懂、记得住、能实操的工具、模型或方法论。
 知识同样符合28法则，一门领域真正核心的内容就是20%，最聪明的办法是用80%的时间学习每一个领域20%的精华。
 我会把每个主题中最精华的20%内容，浓缩在每天一张“ 工具卡 ”上。你只要保存好对你有启发的“卡片”，一年后，你就有了自己的技术工具箱。
 
-![](./_image/WechatIMG7.png)
-
-**3.互动与答疑**
+工具卡示例，你会在每篇原创文章的开头看到它
+3. 互动与答疑
 每周2天我会在专栏中深度互动答疑。不定期会采取“知识众筹”、“案例分析”的方式与大家一起研讨——等栏目走上正轨，还会邀请更多各行业的“超级个体”来分享他们的成功秘密。
 在未来一年，我们会一起在职业中升级心智、掌握技术、持续修炼：
 每周一个主题，了解这个时代职场高手的思维方式和做事方法论；
 每周了解3个职场加速发展的实用工具；
 重新理解职业，系统探索自己，突破发展瓶颈，打造自身优势。
 职场是每天你花时间最多的修炼场，一起修炼成一个很强大也很自由的人。
-##05
+05
 也许你和很多人一样，喜欢“超级个体”这个名字，但又会问
 “超级个体”，到底超级在哪里？
 “超级”是因为这群人是自己的超级英雄——他们从工业化时代的流程中，旧有的组织形态中觉醒过来，决定以个体的身份创造自己的未来，一个人像一家公司一样自我发展、自我超越、自我成就。
