--- a/.Archive/SUMMARY.md/2017-02-08 15-11-04.md
+++ b/.Archive/SUMMARY.md/2017-02-08 15-11-04.md
@@ -2,7 +2,7 @@
 
 - [0-1发刊词：52次加速，助你成为“超级个体”](0-1发刊词：52次加速，助你成为“超级个体”.md)
 - [0-2 热身思考题：你是辆什么车？](0-2 热身思考题：你是辆什么车？.md)
-- [0-3预告：未来5年的职场，长什么样？](0-3预告：未来5年的职场，长什么样？.md)
+- [0-3下周预告：未来5年的职场，长什么样？](0-3下周预告：未来5年的职场，长什么样？.md)
 - [1-1 你的身价，被什么决定？](1-1 你的身价，被什么决定？.md)
 - [1-2 未来哪些能力会越来越增值？](1-2 未来哪些能力会越来越增值？.md)
 - [1-3 未来职业世界，只有三种人](1-3 未来职业世界，只有三种人.md)
@@ -11,11 +11,4 @@
 - [2-2 比投资更需要组合的，是组合式工作](2-2 比投资更需要组合的，是组合式工作.md)
 - [2-6 下周预告：职业世界变化这么快，不变的是什么？](2-6 预告：职业世界变化这么快，不变的是什么？)
 - [3-1 什么才算是一个终极适合的职业？](3-1 什么才算是一个终极适合的职业？.md)
-- [3-2 该现实点还是理想点？选择职业匹配的2种策略](3-2 该现实点还是理想点？选择职业匹配的2种策略.md)
-- [3-3 今天，驱动你早上起床的到底是什么？](3-3 今天，驱动你早上起床的到底是什么？.md)
-- [3-6 下周预告：能力中最重要的部分是什么？](3-6 预告：能力中最重要的部分是什么？.md)
-- [4-1 比学习技能更重要的，是迁移技能](4-1 比学习技能更重要的，是迁移技能.md)
-- [4-2 像顶级跨界高手一样，萃取你的核心能力](4-2 像顶级跨界高手一样，萃取你的核心能力.md)
-- [4-3 乐高式能力结构](4-3 乐高式能力结构.md)
-- [4-6 下周预告：不确定时代，我们要做的第一件事是什么？](4-6 下周预告：不确定时代，我们要做的第一件事是什么？.md)
-- [5-1 有一个问题能让你放弃存量，彻底清零](5-1 有一个问题能让你放弃存量，彻底清零.md)
+- []
