--- a/.Archive/SUMMARY.md/2017-02-08 15-26-54.md
+++ b/.Archive/SUMMARY.md/2017-02-08 15-26-54.md
@@ -6,7 +6,7 @@
 - [1-1 你的身价，被什么决定？](1-1 你的身价，被什么决定？.md)
 - [1-2 未来哪些能力会越来越增值？](1-2 未来哪些能力会越来越增值？.md)
 - [1-3 未来职业世界，只有三种人](1-3 未来职业世界，只有三种人.md)
-- [1-6 下周预告：个体崛起时代，你的职业有什么可能？](1-6预告：个体崛起时代，你的职业有什么可能？.md)
+- [下周预告：个体崛起时代，你的职业有什么可能？](1-6预告：个体崛起时代，你的职业有什么可能？.md)
 - [2-1 你羡慕的自由职业的真相](2-1 你羡慕的自由职业的真相.md)
 - [2-2 比投资更需要组合的，是组合式工作](2-2 比投资更需要组合的，是组合式工作.md)
 - [2-6 下周预告：职业世界变化这么快，不变的是什么？](2-6 预告：职业世界变化这么快，不变的是什么？)
@@ -17,5 +17,5 @@
 - [4-1 比学习技能更重要的，是迁移技能](4-1 比学习技能更重要的，是迁移技能.md)
 - [4-2 像顶级跨界高手一样，萃取你的核心能力](4-2 像顶级跨界高手一样，萃取你的核心能力.md)
 - [4-3 乐高式能力结构](4-3 乐高式能力结构.md)
-- [4-6 下周预告：不确定时代，我们要做的第一件事是什么？](4-6 预告：不确定时代，我们要做的第一件事是什么？.md)
+- [4-6 下周预告：不确定时代，我们要做的第一件事是什么？](4-6 下周预告：不确定时代，我们要做的第一件事是什么？.md)
 - [5-1 有一个问题能让你放弃存量，彻底清零](5-1 有一个问题能让你放弃存量，彻底清零.md)
