--- a/.Archive/SUMMARY.md/2017-02-08 16-03-47.md
+++ b/.Archive/SUMMARY.md/2017-02-08 16-03-47.md
@@ -15,7 +15,7 @@
 - [3-3 今天，驱动你早上起床的到底是什么？](3-3.md)
 - [3-6 下周预告：能力中最重要的部分是什么？](3-6.md)
 - [4-1 比学习技能更重要的，是迁移技能](4-1.md)
-- [4-2 像顶级跨界高手一样，萃取你的核心能力](4-2.md)
-- [4-3 乐高式能力结构](4-3.md)
-- [4-6 下周预告：不确定时代，我们要做的第一件事是什么？](4-6.md)
-- [5-1 有一个问题能让你放弃存量，彻底清零](5-1.md)
+- [4-2 像顶级跨界高手一样，萃取你的核心能力](4-2 像顶级跨界高手一样，萃取你的核心能力.md)
+- [4-3 乐高式能力结构](4-3 乐高式能力结构.md)
+- [4-6 下周预告：不确定时代，我们要做的第一件事是什么？](4-6 预告：不确定时代，我们要做的第一件事是什么？.md)
+- [5-1 有一个问题能让你放弃存量，彻底清零](5-1 有一个问题能让你放弃存量，彻底清零.md)
