--- a/.Archive/0-2.md/2017-02-08 16-25-17.md
+++ b/.Archive/0-2.md/2017-02-08 16-25-17.md
@@ -73,13 +73,9 @@
 ##一个总结
 
 今天我们讲了一个小工具，叫做“车日路”。也是职业发展里最核心的三个要素：自我-目标-路径。在未来的这一年，我们会越来越强化我们的能力和装备，清晰我们的目标和达成路径，加速奔跑在驶向未来的道路上。
-
 我们还提到了三种不同的校准策略：升级车、选择路、做自己，在三个不同的阶段。
-
 ##一个思考
-1. 你是辆什么车？你要去哪里？你准备如何去？
-2. 你现在处于什么阶段？你会选择3个策略的哪个策略？你是要升级车？还是选好路，还是做自己？
-
+1.你是辆什么车？你要去哪里？你准备如何去？
+2.你现在处于什么阶段？你会选择3个策略的哪个策略？你是要升级车？还是选好路，还是做自己？
 这是我们开始前的思考题，
-
-**那么，你是一辆什么车？**
+那么，你是一辆什么车？
