--- a/.Archive/1-1.md/2017-02-08 16-28-07.md
+++ b/.Archive/1-1.md/2017-02-08 16-28-07.md
@@ -70,64 +70,41 @@
 
 全新的职业价值坐标就会出现，叫做圈子、能力与特色。
 
-所以今天在职场上面，最牛的人不再是大众偶像的大咖，而是各个垂直领域圈子里能力超强且有影响力的大神。
-
+所以今天在职场上面，最牛的人不再是大众偶像的大咖，而是各个垂直领域圈子里能力超强且有影响力的
+大神。
 而最有危机感的人，应该是那些纯靠年头和资历混到企业中高层，但是又并没有进入资源层、脱离职场的人。
 ##一个策略
-
 在这个全新的价值体系中间，个人的增值策略肯定也会发生改变。
 >第一个，持续放大自己的影响力；
 第二个，持续提高自己的能力；
 第三个，持续宣扬自己讨人喜欢的特色。
 
 未来的职场人，一个人可能就有了300人的圈子，一门自己独特的手艺，有个性，就能让自己活得很好。
-
 以前我们把能力存在组织里面；后来我们把能力存在钱里面；到今天我们可能有机会把自己的能力存在圈子和影响力里面。
-
 ——这将会是一个全新的个人崛起的时代。
-
 那么在这个时代，该怎么样拓展自己的竞争力呢？
-
 **第一个就是要走出去发展圈子，尤其是同行和同好的圈子。**
-
 从现在开始，每个月至少有3次跟自己弱关系圈的人见面。
-
 **第二是持续提高自己的能力。**
-
 当我们进入一个圈子，不妨问自己3个问题：
 1. 有什么事，我在这个圈子里面比较有能力优势的？
 2. 有什么事，我在这个圈子里面对大家最有价值的？
 3. 有什么事，是我真正感兴趣的事儿？
-
-如果你能找到这三者的交集，就持续地做这个事情，
-你很快就会在圈子里面形成一个独特的能力标签和优势。
-
+如果你能找到这三者的交集，就持续地做这个事情，你很快就会在圈子里面形成一个独特的能力标签和优势。
 **第三就是放大你的特色。**
-
 这是一个个性化的年代，最大的风险就是你是一个毫无特色的好人。
-
 所以当面目模糊的专业人士越来越多，人们就只记得有特色的人，而且会跟其中认同的人开始互动。
-
 持续地在圈子里面放大自己的影响力，提升自己的能力，强化你的特色，你的职业身价就会越来越高。
-
 最后提醒一句，生涯界普遍认为，个人崛起是个未来的趋势，但是个人价值体系远远没有形成一种主流。
-
 所以在这之前，大部分人可能还是需要在企业里面呆很长一段时间。你一方面要保护好自己原来那个坐标系的行业、企业和职业；一方面也要做好准备，在风来的时候，你站在2楼带着翅膀，纵身一跃就飞起来了。
 ##一个小结
-
->传统职业体系：行业 X 企业 X 职业； 陆地体系
+传统职业体系：行业 X 企业 X 职业； 陆地体系
 个人时代体系：圈子 X 能力 X 特色； 海洋体系
-
 这两个体系会并存很长一段时间。
-
 我们提到了让自己职场增值的3个方法：
-
 第一个是不断建立弱联系，扩大自己的影响力；
-
 第二个是找到自己的差异化能力优势；
-
 第三个是持续放大自己的特色。
-
 ##今日精进
 1. 你已经知道了职业定位的2个坐标系，今天你的职业身价更多取决于企业体系，还是个人体系？
 2. 从“圈子、能力、个性”三个方面来看，如果要提升自己的身价，你应该先从哪一个维度提升自己？
