--- a/.Archive/1-2.md/2017-02-08 16-31-47.md
+++ b/.Archive/1-2.md/2017-02-08 16-31-47.md
@@ -110,21 +110,15 @@
 
 ####一个策略
 
->**在一个机器越来越强的年代，什么样的能力是最厉害的呢？**
+**在一个机器越来越强的年代，什么样的能力是最厉害的呢？**
 **能够跟机器协作的人的能力。**
 
 在全世界都只有步兵的时候，一个会骑马的步兵就很厉害。
-
 而在有枪的年代，一个会用枪的功夫高手是最有机会获胜 。
-
 所以在今天这个时代，最厉害的是懂人性又懂电脑的人——在每一个时代，能用自己的能力跟那个时代最先进的生产力合作的人，都是那个时代的赢家。而在这个时代，真正的赢家就是一个能用高感性能力跟高科技合作的人。
-
 ####一个小结
-
 我们今天讲到了未来世界变得越来越重要的6种能力：用来影响的设计感和讲故事，用来做产品的共情能力，跨界能力以及玩乐的能力，用来自己驱动自己和他人的意义感的能力。
-
 在这个电脑飞速发展的时代，我们不应感到恐惧，而且应该感到快乐，因为我们可以跟电脑合作，成为一个人马合一、人枪合一、人电脑合一的新物种，这样的人才是这个时代真正的超级个体。
-
 ####今日精进
 1. 你是哪个行业的？近两年来，技术和互联网对于你们行业最大的变化是什么？
 2. 在你看来，有哪些行业、职业或者工种正在慢慢消退，哪些正在变得越来越值钱？为什么？
