--- a/.Archive/3-3.md/2017-02-08 16-41-27.md
+++ b/.Archive/3-3.md/2017-02-08 16-41-27.md
@@ -82,23 +82,15 @@
 生存期进入发展期的重要指标是经济独立，收入大于支出。
 
 发展期进入事业期的最好情况是你财务自由，完全不需要因为钱来工作；如果达不到也无所谓，你只需要确保做自己喜欢的事的收入，能够满足自己的持续发展需求，这就需要你找到这方向，提前做能力、资源的储备。
-
 **2.评估下自己的职业驱动力**
-
-- 生存期的核心诉求是收入；
-- 发展期的核心诉求是外在成功感和能力资源提升；
-- 事业期核心诉求是内在成功感和意义感；
-
+生存期的核心诉求是收入；
+发展期的核心诉求是外在成功感和能力资源提升；
+事业期核心诉求是内在成功感和意义感；
 你今天早上起床，驱动你上班的到底是什么动力？
-
 **3.如果财务和心理指标不一致，听财务指标的，财务反映能力，能力提升才是这一切的关键。**
-
 不管你的三阶段走得有多快，但是发展的规律并没有变——可以加速通过，但是不能跨越。
-
 诗和远方是一定要有的，但是要从理解和接受现实的第一个台阶开始。
-
 所以，不管今天的你在赚钱谋生，还是在努力链接资源发展，还是在寻求实现自我的价值，你都在自我实现的轨道上。
-
 ##今日精进
 1. 一句话说说，早上驱动你起床上班的是什么？ 从财务和心理两方面评估，你在生涯三阶段的哪一个阶段？
 2. 很多人都是这样——心在事业期，身在生存期，心比天高，命比纸薄，很想做大事，但是小事做不好。如果让你用一席话来调整他们的心态。你会怎么说？
