--- a/.Archive/4-2.md/2017-02-08 16-44-57.md
+++ b/.Archive/4-2.md/2017-02-08 16-44-57.md
@@ -73,31 +73,22 @@
 
 **最后，关于技能萃取，到底什么是忽悠，什么是真的萃取？**
 
-**两者的差别在于，你有没有把一件事真的做得不错。**这件事中间，你下了聪明人的笨功夫，然后你可以把这个能力带到新的领域去。如果你做过，那就叫萃取；如果没做过，那就是忽悠。
-
+**两者的差别在于，你有没有把一件事真的做得不错。
+**这件事中间，你下了聪明人的笨功夫，然后你可以把这个能力带到新的领域去。如果你做过，那就叫萃取；如果没做过，那就是忽悠。
 听到这里你也会明白——即使你不喜欢工作，这都不是问题，问题是你有没有拼命地玩，拼命地生活？—— 如果你连玩都是初级选手，连玩和生活都不努力，你的生命又有什么值得萃取的呢？你面对生活、工作和爱好的态度，就是你面对人生的态度。
-
 ##一个总结
-
 我们今天找到了能力萃取的三步：
 1. 找到一件成就事件
 2. 萃取一个能力名词，最好是不明觉厉的
 3. 落实到一个新的领域去
-
 能力萃取的前提，是你真的在下聪明人的笨功夫，让生命中有精华可以提炼——做得认真，玩得努力，生活得全力以赴。
-
 ##今日精进
 1. 你有没有把一件事情做到过自己很满意的经历？ 
 2. 如果让你从这段经历中“萃取”一两个能力，那是什么能力？
 3. 这些能力对于你当前的工作、挑战和困境有什么支持？
-
 根据这些思考，把自己一段经历中的能力“萃取”出来，作为自己的能力标签，发到朋友圈，还可配上今天的工具图。
-
 “【超级个体】我的能力标签：我曾经……（一段经历），这让我学到……能力/这让我意识到我有……的能力（可迁移能力）。 我可以把这些能力运用到……（新领域）去。”
-
 朋友圈验证法：
-
 之所以要求是朋友圈，因为这个能力标签必须真实、可信、也符合大家对你的印象——如果你能在朋友圈发出去，证明这句话已经过了这三个要求，也是你自我营销的好方式。
-
 附录：各种可迁移的能力
 
