--- a/.Archive/1-2.md/2017-02-08 16-30-27.md
+++ b/.Archive/1-2.md/2017-02-08 16-30-27.md
@@ -50,81 +50,46 @@
 所有伟大的产品经理都有共情能力。比如说微信的张小龙，微信总是能做出一些我们特别想用、但是没有想到的功能，就是因为一个好的产品经理能够挖掘出你都没有意识到的需求。
 
 ####第三、讲故事的能力
-
 所有著名的畅销书作家、好的导演……都是讲故事的高手；
-
 商业领袖也需要会讲故事，你看乔布斯、雷布斯、马云……就把一个商业讲成了谁都能懂的故事；
-
 政治领袖对于讲故事更加看重。美国总统选举的时候，身边的班子中一定有3个人，一个是首席经济学家，他负责让总统把经济问题讲清楚，讲明白，符合逻辑；一个是形象设计师，他负责让总统有一个大家可以理解的符号形象出现；第三个就是撰稿人，他的任务就是给民众不断讲一个又一个故事。而丹尼尔·平克本人就是美国前副总统戈尔的御用撰稿人。
-
 ####第四、整合的能力
-
 行业不断跨界，领域不断变化，最强不是总在从头学习，而是持续整合的人。
-
 培训界有这么一句话：给小白要讲大牛，给大牛要讲跨界。比如混沌研习社的李善友老师，他是从物理学去讲商业；我特别尊敬的吴伯凡老师，他是从生态学的角度去讲商业、讲管理。
-
 产生一个跨界才会产生心理距离，会更好理解现状。彼得·德鲁克每隔3年换一个领域研究；查理·芒格有100个不同领域的模型。
-
 ####第五、娱乐感
-
 简单来说就是一个“让你觉得好玩的能力”。
-
 玩乐是人类的天性：
-
 俄罗斯方块其实是一个没有任何目的，既不救公主也不找宝藏的游戏，它唯一的目的就是看你怎么死。但即使这样，人们也愿意一直玩下去，因为你享受这个玩的过程。
-
 今天如果你是做产品的，你的产品会跟人玩，那么你的产品就会有魅力；
-
 你是一个做创作的，你会跟自己玩，你就会有创意。
-
 ####最后一个能力是意义感
-
 意义感是一个人自我领导和领导他人的能力。
-
 未来世界变化太多，我们基本上不可能在开始做时就明确的知道结果。但是如果你不全力以赴的做，就一点胜出的机会都没有。——这个时候该怎么办呢？
-
 领导者会对这个事情本身赋予一个意义。
-
 当做这个事情的过程都已经值回票价，你可能就不会太过关注结果，但这种状态是最有机会胜出的，所以如果有什么东西能抵御不确定性的话，那么就是确定的意义感。
-
 微软百科和维基百科的案例：
 >微软百科投入了将近一个亿的预算、三千多个专业人士、花了八年时间去编撰，但最后面还是不得不宣告失败；而维基百科只用到微软不到百分之一的资源，却在这十五年时间发展出来将近1300万词条和250种语言。它靠的是什么？靠的就是“全球所有人共享所有信息”的意义感。
 
 在一个变化的时代，意义感对我们的驱动更加深远。
-
 ▼
-
->设计感和讲故事——产生影响力；
+设计感和讲故事——产生影响力；
 共情能力、整合能力和好玩——提高竞争力；
 意义感——自我驱动和领导他人；
-
 所以当有人将这6种东西整合到一起——通俗点说，就是一个人会讲故事、能跨界、理解人心、有品位、既好玩，又活得有点追求——他将是一个极其强大的人。
-
 未来，高感性能力汇聚的职业会更增值 。
-
 过去理性技能较多的：程序员、会计师
-
 今天感性技能较多的：旅行体验师、设计师、产品经理、导演
-
 具备6种高感性能力的人会在未来更加值钱。
-
 ####一个策略
-
->**在一个机器越来越强的年代，什么样的能力是最厉害的呢？**
+**在一个机器越来越强的年代，什么样的能力是最厉害的呢？**
 **能够跟机器协作的人的能力。**
-
 在全世界都只有步兵的时候，一个会骑马的步兵就很厉害。
-
 而在有枪的年代，一个会用枪的功夫高手是最有机会获胜 。
-
 所以在今天这个时代，最厉害的是懂人性又懂电脑的人——在每一个时代，能用自己的能力跟那个时代最先进的生产力合作的人，都是那个时代的赢家。而在这个时代，真正的赢家就是一个能用高感性能力跟高科技合作的人。
-
 ####一个小结
-
 我们今天讲到了未来世界变得越来越重要的6种能力：用来影响的设计感和讲故事，用来做产品的共情能力，跨界能力以及玩乐的能力，用来自己驱动自己和他人的意义感的能力。
-
 在这个电脑飞速发展的时代，我们不应感到恐惧，而且应该感到快乐，因为我们可以跟电脑合作，成为一个人马合一、人枪合一、人电脑合一的新物种，这样的人才是这个时代真正的超级个体。
-
 ####今日精进
 1. 你是哪个行业的？近两年来，技术和互联网对于你们行业最大的变化是什么？
 2. 在你看来，有哪些行业、职业或者工种正在慢慢消退，哪些正在变得越来越值钱？为什么？
